--- a/app/tpl/index.hbs
+++ b/app/tpl/index.hbs
@@ -1,4 +1,4 @@
-{{> header title="Baqend  aaaa AAAA Bootstrap-starter"}}
+{{> header title="Baqend Bootstrap"}}
 
 <div class="main">
     {{> main}}
