--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -16,6 +16,7 @@
     <!-- build:css css/app.css -->
     <link href="css/style.css" rel="stylesheet">
     <!-- endbuild -->
+    <!--commentar-->
 </head>
 
 <body data-spy="scroll" data-target=".spyed" id="top">
