--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -29,5 +29,6 @@
                 <li role="presentation"><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <h3 class="text-muted">Project name</h3>
+        <h3 class="text-muted">Project thabefrijo Shop</h3>
     </div>
+</div>
