--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -27,6 +27,8 @@
                 <li role="presentation" class="active"><a href="#">Home</a></li>
                 <li role="presentation"><a href="#">About</a></li>
                 <li role="presentation"><a href="#">Contact</a></li>
+                <li role="presentation"><a href="#">Contact mail</a></li>
+                <li role="presentation"><a href="#">Contact post</a></li>
             </ul>
         </nav>
         <h3 class="text-muted">Project thabefrijo Shop</h3>
