--- a/app/tpl/partials/main.hbs
+++ b/app/tpl/partials/main.hbs
@@ -1,12 +1,12 @@
     <div class="jumbotron">
         <h1 id="hello"></h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <p id="yes"><a class="btn btn-lg btn-success" role="button">ClickMe</a></p>
         <p><a class="btn btn-lg btn-success" href="https://github.com/Baqend/bootstrap-starter" role="button">See Instructions for this project</a></p>
     </div>
 
     <div class="row marketing">
         <div class="col-lg-6">
-            <h4>Subheading</h4>
+            <h4 id="yes" role="button">ClickMe</h4>
             <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
             <h4>Subheading</h4>
