--- a/app/tpl/partials/main.hbs
+++ b/app/tpl/partials/main.hbs
@@ -1,6 +1,6 @@
     <div class="jumbotron">
         <h1 id="hello"></h1>
-        <p id="yes"><a class="btn btn-lg btn-success" role="button">ClickMe</a></p>
+        <p id="yes"><a class="btn btn-lg btn-success" role="button">lClickMe</a></p>
         <p><a class="btn btn-lg btn-success" href="https://github.com/Baqend/bootstrap-starter" role="button">See Instructions for this project</a></p>
     </div>
 
