--- a/app/tpl/partials/main.hbs
+++ b/app/tpl/partials/main.hbs
@@ -24,7 +24,7 @@
             <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
 
             <h4>Subheading</h4>
-            <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+            <p>Maecenas sed diam eget risus varius blandifsdfsdfdst sit amet non magna.</p>
         </div>
     </div>
 
