Homepage neue Design

--- a/app/tpl/index.hbs
+++ b/app/tpl/index.hbs
@@ -1,6 +1,6 @@
 {{> header title="Baqend Bootstrap"}}
 
-<div class="main"> <p>Thang,Benjamin,Friedrich,Jovanna</p>
+<div class="main">
     {{> main}}
 </div>
 
