--- a/app/tpl/partials/footer.hbs
+++ b/app/tpl/partials/footer.hbs
@@ -1,33 +1,17 @@
-    <footer class="footer">
-        <p>&copy; 2016 Company, Inc.</p>
-    </footer>
-</div> <!-- end container-->
+<footer class="footer"> 
+    <p class="pull-right">
+        <a href="#">Back to top</a></p>  <p>&copy; 2016 Company, Inc. &middot;
+        <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p> 
+</footer>
+ </div>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-<!-- build:js({app,.}) js/app.js -->
-<script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
-<script src="/node_modules/baqend/dist/baqend.js"></script>
-<script src="js/main.js"></script>
+<!-- end container-->  
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script> <!-- build:js({app,.}) js/app.js --> 
+<script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script> 
+<script src="/node_modules/baqend/dist/baqend.js"></script> 
+<script src="js/main.js"></script> <
+
 <!-- endbuild -->
-
-<script>
-    var gaProperty = '';
-    (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', gaProperty, 'auto');
-    ga('set', 'anonymizeIp', true);
-    ga('send', 'pageview');
-</script>
-
-</body>
+ </body> 
 </html>
