--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -1,35 +1,52 @@
-<!DOCTYPE html>
-<html lang="de">
-
-<head>
+<<!DOCTYPE html> 
+<html lang="de"> 
+<head> 
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=9;IE=10;IE=Edge,chrome=1"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="icon" type="image/x-icon" href="img/favicon.ico"/>
-
-    {{#if title}}
-      <title>{{title}}</title>
-    {{else}}
-      <title>Title</title>
-    {{/if}}
-
-    <!-- build:css css/app.css -->
+     
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+     
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags --> 
+    <meta name="description" content="">
+     
+    <meta name="author" content="">
+     
+    <link rel="icon" href="../../favicon.ico">
+       <title>Power to the People</title>      <!-- Bootstrap core CSS --> 
+    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+            <!-- build:css css/app.css --> 
     <link href="css/style.css" rel="stylesheet">
-    <!-- endbuild -->
+         <!-- endbuild --> 
 </head>
-
-<body data-spy="scroll" data-target=".spyed" id="top">
-<div class="container">
-    <div class="header clearfix">
-        <nav>
-            <ul class="nav nav-pills pull-right">
-                <li role="presentation" class="active"><a href="#">Home</a></li>
-                <li role="presentation"><a href="#">About</a></li>
-                <li role="presentation"><a href="#">Contact</a></li>
-                <li role="presentation"><a href="#">Contact mail</a></li>
-                <li role="presentation"><a href="#">Contact post</a></li>
-            </ul>
-        </nav>
-        <h3 class="text-muted">Project thabefrijo Shop</h3>
+  <!-- NAVBAR ================================================== --> 
+<body>  
+<nav class="navbar navbar-inverse"> 
+    <div class="container-fluid"> 
+        <div class="navbar-header">  <a class="navbar-brand" href="#">PTTP</a> </div>
+         
+        <ul class="nav navbar-nav navbar-right"> 
+            <li><a href="#">LOG IN</a></li>
+             
+            <li class="dropdown">  <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span
+                    class="glyphicon glyphicon-align-justify"></span></a>  <span class="caret"></span></a> 
+                <ul class="dropdown-menu"> 
+                    <li><a href="#">COMPETITION</a></li>
+                     
+                    <li><a href="#">SHOP</a></li>
+                     
+                    <li><a href="#">FORUM</a></li>
+                     
+                    <li><a href="#">ARTIST</a></li>
+                     
+                    <li><a href="#">ABOUT US</a></li>
+                     
+                </ul>
+                 
+            </li>
+             
+        </ul>
+         
     </div>
-</div>
+     
+</nav>
