--- a/app/tpl/partials/main.hbs
+++ b/app/tpl/partials/main.hbs
@@ -1,31 +1,63 @@
-    <div class="jumbotron">
-        <h1 id="hello"></h1>
-        <p id="yes"><a class="btn btn-lg btn-success" role="button">lClickMe</a></p>
-        <p><a class="btn btn-lg btn-success" href="https://github.com/Baqend/bootstrap-starter" role="button">See Instructions for this project</a></p>
+<div class="jumbotron">  <h1>POWER TO THE PEOPLE</h1> 
+</div>       <!-- Marketing messaging and featurettes     ================================================== -->     <!-- Wrap the rest of the page in another container to center all the content. -->       <!-- START THE FEATURETTES -->  
+<hr class="featurette-divider">  
+<div class="row featurette"> 
+    <div class="col-md-7">  <h2 class="featurette-heading">COMPETITION <span class="text-muted"></span></h2>  <p
+            class="lead"></p> 
     </div>
-
-    <div class="row marketing">
-        <div class="col-lg-6">
-            <h4 id="yes" role="button">ClickMe</h4>
-            <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-            <h4>Subheading</h4>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-            <h4>Subheading</h4>
-            <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-        </div>
-
-        <div class="col-lg-6">
-            <h4>Subheading</h4>
-            <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-            <h4>Subheading</h4>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-            <h4>Subheading</h4>
-            <p>Maecenas sed diam eget risus varius blandifsdfsdfdst sit amet non magna.</p>
-        </div>
+     
+    <div class="col-md-5"> 
+        <!--   <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image"> -->
+         
     </div>
-
-
+     
+</div>  
+<hr class="featurette-divider">  
+<div class="row featurette"> 
+    <div class="col-md-7 col-md-push-5">  <h2 class="featurette-heading">SHOP<span class="text-muted"></span></h2>  <p
+            class="lead"></p> 
+    </div>
+     
+    <div class="col-md-5 col-md-pull-7"> 
+        <!-- <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image"> -->
+         
+    </div>
+     
+</div>  
+<hr class="featurette-divider">  
+<div class="row featurette"> 
+    <div class="col-md-7">  <h2 class="featurette-heading">ARTISTS <span class="text-muted"></span></h2>  <p
+            class="lead"></p> 
+    </div>
+     
+    <div class="col-md-5"> 
+        <!--  <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image"> -->
+         
+    </div>
+     
+</div>  
+<hr class="featurette-divider">  
+<div class="row featurette"> 
+    <div class="col-md-7 col-md-push-5">  <h2 class="featurette-heading">FORUM<span class="text-muted"></span></h2>  <p
+            class="lead"></p> 
+    </div>
+     
+    <div class="col-md-5 col-md-pull-7"> 
+        <!-- <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image"> -->
+         
+    </div>
+     
+</div>  
+<hr class="featurette-divider">  
+<div class="row featurette"> 
+    <div class="col-md-7">  <h2 class="featurette-heading">ABOUT US<span class="text-muted"></span></h2>  <p
+            class="lead"></p> 
+    </div>
+     
+    <div class="col-md-5"> 
+        <!-- <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image"> -->
+         
+    </div>
+     
+</div> 
+<hr class="featurette-divider">    
