webShop inner link

--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -33,7 +33,7 @@
                 <ul class="dropdown-menu"> 
                     <li><a href="#">COMPETITION</a></li>
                      
-                    <li><a href="#">SHOP</a></li>
+                    <li><a href="/webShop.html">SHOP</a></li>
                      
                     <li><a href="#">FORUM</a></li>
                      
