LogIn/PTTP/SignUp sind nun buttons.

--- a/app/tpl/partials/footer.hbs
+++ b/app/tpl/partials/footer.hbs
@@ -12,6 +12,6 @@
 <script src="/node_modules/baqend/dist/baqend.js"></script> 
 <script src="js/main.js"></script> <
 
-<!-- endbuild hbjhgj-->
+<!-- endbuild -->
  </body> 
 </html>
