--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -21,16 +21,29 @@
 </head>
   <!-- NAVBAR ================================================== --> 
 <body>  
-<nav class="navbar navbar-inverse"> 
+<nav class="navbar navbar-default"> 
     <div class="container-fluid"> 
-        <div class="navbar-header">  <a class="navbar-brand" href="#">PTTP</a> </div>
+        <div class="navbar-header"> 
+            <button class="navbar-brand" href="#">PTTP</button>
+             
+        </div>
          
         <ul class="nav navbar-nav navbar-right"> 
-            <li><a href="#">LOG IN</a></li>
+
+            <li>
+                <button href="#" class="glyphicon glyphicon-user"> SIGN UP</button>
+            </li>
+            <li>
+                <button href="#" class="glyphicon glyphicon-log-in"> LOG IN</button>
+            </li>
              
-            <li class="dropdown">  <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span
-                    class="glyphicon glyphicon-align-justify"></span></a>  <span class="caret"></span></a> 
+            <li class="dropdown"> 
+                <button class="dropdown-toggle" data-toggle="dropdown">
+                    <span class="glyphicon glyphicon-align-justify"></span></button>
+                 
+                <span class="caret"></span></a> 
                 <ul class="dropdown-menu"> 
+
                     <li><a href="#">COMPETITION</a></li>
                      
                     <li><a href="/webShop.html">SHOP</a></li>
