--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -24,7 +24,7 @@
 <nav class="navbar navbar-default"> 
     <div class="container-fluid"> 
         <div class="navbar-header"> 
-            <button class="navbar-brand" href="#">PTTP</button>
+            <button class="navbar-brand" href="index.html">PTTP</button>
              
         </div>
          
