pttp verlinkt auf sich selbst-korrigiert- 2 mal

--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -31,10 +31,10 @@
         <ul class="nav navbar-nav navbar-right"> 
 
             <li>
-                <button href="#" class="glyphicon glyphicon-user"> SIGN UP</button>
+                <button class="glyphicon glyphicon-user"><a href="#">SIGN UP</a></button>
             </li>
             <li>
-                <button href="#" class="glyphicon glyphicon-log-in"> LOG IN</button>
+                <button class="glyphicon glyphicon-log-in"><a href="#">LOG IN</a></button>
             </li>
              
             <li class="dropdown"> 
