--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -24,7 +24,7 @@
 <nav class="navbar navbar-default"> 
     <div class="container-fluid"> 
         <div class="navbar-header"> 
-            <button class="navbar-brand"><a href="index.html">PTTP</a></button>
+            <a class="btn btn-primary" href="index.html">PTTP</a>
              
         </div>
          
