login/signup buttons geändert

--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -24,21 +24,22 @@
 <nav class="navbar navbar-default"> 
     <div class="container-fluid"> 
         <div class="navbar-header"> 
-            <a class="btn btn-primary" href="index.html">PTTP</a>
+            <a class="btn btn-link" href="index.html">PTTP</a>
              
         </div>
          
         <ul class="nav navbar-nav navbar-right"> 
 
             <li>
-                <button class="glyphicon glyphicon-user"><a href="#">SIGN UP</a></button>
+                <a class="glyphicon glyphicon-user" class="btn btn-default" href=#"> SIGN UP</a>
             </li>
             <li>
-                <button class="glyphicon glyphicon-log-in"><a href="#">LOG IN</a></button>
+                <a class="glyphicon glyphicon-log-in" class="btn btn-default" href=#"> LOG IN</a>
             </li>
              
             <li class="dropdown"> 
-                <button class="dropdown-toggle" data-toggle="dropdown">
+                <button class="btn btn-default class=" dropdown-toggle
+                " data-toggle="dropdown">
                     <span class="glyphicon glyphicon-align-justify"></span></button>
                  
                 <span class="caret"></span></a> 
