--- a/app/tpl/partials/main.hbs
+++ b/app/tpl/partials/main.hbs
@@ -1,5 +1,8 @@
 <div class="jumbotron">  <h1>POWER TO THE PEOPLE</h1> 
-</div>       <!-- Marketing messaging and featurettes     ================================================== -->     <!-- Wrap the rest of the page in another container to center all the content. -->       <!-- START THE FEATURETTES -->  
+</div>
+
+
+       <!-- Marketing messaging and featurettes     ================================================== -->     <!-- Wrap the rest of the page in another container to center all the content. -->       <!-- START THE FEATURETTES -->  
 <hr class="featurette-divider">  
 <div class="row featurette"> 
     <div class="col-md-7">  <h2 class="featurette-heading">COMPETITION <span class="text-muted"></span></h2>  <p
