--- a/app/less/style.less
+++ b/app/less/style.less
@@ -19,11 +19,17 @@ body {
   padding-bottom: 20px;
   border-bottom: 1px solid #e5e5e5;
 }
+
+.header button {
+  height: 20px;
+  width: 20px;
+}
+
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
   margin-top: 0;
   margin-bottom: 0;
-  line-height: 40px;
+  line-height: 10px;
 }
 
 /* Custom page footer */
@@ -52,5 +58,6 @@ body {
   text-align: center;
 ; }
   .button {
-    text-align: right;
+    text-align: center;
   ;}
+
