--- a/app/tpl/partials/footer.hbs
+++ b/app/tpl/partials/footer.hbs
@@ -10,7 +10,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script> <!-- build:js({app,.}) js/app.js --> 
 <script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script> 
 <script src="/node_modules/baqend/dist/baqend.js"></script> 
-<script src="js/main.js"></script> <
+<script src="js/main.js"></script> 
 
 <!-- endbuild -->
  </body> 
