header padding angepasst

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -2,8 +2,10 @@
 
 /* Space out content a bit */
 body {
-  padding-top: 20px;
+  padding-top: 0px;
   padding-bottom: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -18,11 +20,13 @@ body {
 .header {
   padding-bottom: 20px;
   border-bottom: 1px solid #e5e5e5;
+
 }
 
-.header button {
+.header.button {
   height: 20px;
-  width: 20px;
+  width: 30px;
+
 }
 
 /* Make the masthead heading the same height as the navigation */
