--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -33,13 +33,13 @@
             <li>
                 <a class="glyphicon glyphicon-user" class="btn btn-default" href=#"> SIGN UP</a>
             </li>
+
             <li>
                 <a class="glyphicon glyphicon-log-in" class="btn btn-default" href=#"> LOG IN</a>
             </li>
              
             <li class="dropdown"> 
-                <button class="btn btn-default class=" dropdown-toggle
-                " data-toggle="dropdown">
+                <button class="btn btn-default" ‚ class="dropdown-toggle" data-toggle="dropdown">
                     <span class="glyphicon glyphicon-align-justify"></span></button>
                  
                 <span class="caret"></span></a> 
