ProduktAnsicht Beispiel Seite mit button Funktionen

--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -45,10 +45,10 @@
                         <div class="product-stock">
                             xxx.xxx Euro
                         </div>
-                        <h3>Große</h3>
+                        <h3></h3>
                         <div class="product-specifications">
                             <ul id="dropdown">
-                                <ol class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><button class="btn btn-success " >Wählen</button> </a>
+                                <ol class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><button class="btn btn-success " >Große Wählen</button> </a>
                                     <ol class="dropdown-menu">
 
                                         <li><a href="#">XS</a></li>
@@ -60,14 +60,14 @@
                                 </ol>
                             </ul>
                         </div>
-                        <h3>Warenkorb</h3>
+                        <h3>
                         <div class="product-descriptions">
-                            <button type="button" class="btn btn-success ">Kaufen</button>
-                        </div>
-                        <h3>Wunschzettel</h3>
+                            <button type="button" class="btn btn-success ">In den Warenkorb</button>
+                        </div></h3>
+                        <h3>
                         <div class="product-descriptions">
-                            <button type="button" class="btn btn-success ">Wunschzettel</button>
-                        </div>
+                            <button type="button" class="btn btn-success ">Wunschzettel   </button>
+                        </div></h3>
                     </div>
                 </div>
             </div>
