--- a/app/less/style.less
+++ b/app/less/style.less
@@ -64,4 +64,21 @@ body {
   .button {
     text-align: center;
   ;}
+#test1
+{
+  margin-top:-10px;
+  margin-bottom:0px;
+  margin-left:-80px;
+  margin-right:00px;
+  //border: dashed black;
+  //position: absolute;
+}
+#test2
+{
+  padding-right: 40px;
+}
 
+#test3
+{
+  padding-right: 35px;
+}
