--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -46,9 +46,9 @@
                             xxx.xxx Euro
                         </div>
                         <h3></h3>
-                        <div class="product-specifications">
+                        <div id = "test1" class="product-specifications">
                             <ul id="dropdown">
-                                <ol class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><button class="btn btn-success " >Große Wählen</button> </a>
+                                <ol class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><button id = "test3" class="btn btn-success " >Große Wählen</button> </a>
                                     <ol class="dropdown-menu">
 
                                         <li><a href="#">XS</a></li>
@@ -66,7 +66,7 @@
                         </div></h3>
                         <h3>
                         <div class="product-descriptions">
-                            <button type="button" class="btn btn-success ">Wunschzettel   </button>
+                            <button id = "test2" type="button" class="btn btn-success ">Wunschzettel</button>
                         </div></h3>
                     </div>
                 </div>
