--- a/app/less/produktAnsicht.less
+++ b/app/less/produktAnsicht.less
@@ -33,3 +33,12 @@
 .product-detail-2 .product-descriptions {
     word-wrap: break-word;
 }
+#testthu
+{
+    margin-top:800px;
+    margin-bottom:40px;
+    margin-left:50px;
+    margin-right:30px;
+    border: dashed black;
+    position: absolute;
+}
