--- a/app/less/style.less
+++ b/app/less/style.less
@@ -2,8 +2,7 @@
 
 /* Space out content a bit */
 body {
-  padding-top: 0px;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   padding-left: 5px;
   padding-right: 5px;
 }
@@ -18,14 +17,17 @@ body {
 
 /* Custom page header */
 .header {
+
+  height: 50px;
+  width: auto;
   padding-bottom: 20px;
   border-bottom: 1px solid #e5e5e5;
 
 }
 
-.header.button {
-  height: 20px;
-  width: 30px;
+.button {
+  height: 10px;
+  width: 10px;
 
 }
 
@@ -47,6 +49,7 @@ body {
 @media (min-width: 768px) {
   .container {
     max-width: 730px;
+    text-align: center;
   }
 }
 .container-narrow > hr {
