--- a/app/tpl/partials/main.hbs
+++ b/app/tpl/partials/main.hbs
@@ -1,4 +1,12 @@
-<div class="jumbotron">  <h1>POWER TO THE PEOPLE</h1> 
+<div class="jumbotron">
+    <h1>Power to the people</h1>
+
+    <video autoplay="" loop="" class="fillWidth fadeIn animated"
+           poster="https://media.giphy.com/media/XcsdCc78BtNBu/giphy.gif"
+           id="video-background">
+        <source src="https://media.giphy.com/media/XcsdCc78BtNBu/giphy.gif" type="video/gif">
+        Your browser does not support the video tag. I suggest you upgrade your browser.
+    </video>
 </div>
 
 
