gif hinzugefügt "full screen"

--- a/app/tpl/partials/main.hbs
+++ b/app/tpl/partials/main.hbs
@@ -1,7 +1,7 @@
 <div class="jumbotron">
     <h1>Power to the people</h1>
 
-    <video autoplay="" loop="" class="fillWidth fadeIn animated"
+    <video width="100%" autoplay="" loop="" class="fillWidth fadeIn animated"
            poster="https://media.giphy.com/media/XcsdCc78BtNBu/giphy.gif"
            id="video-background">
         <source src="https://media.giphy.com/media/XcsdCc78BtNBu/giphy.gif" type="video/gif">
