gif hinzugefügt ALS BACKGROUND

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -38,6 +38,12 @@ body {
   line-height: 10px;
 }
 
+.jumbotron {
+  background-image: url("https://media.giphy.com/media/XcsdCc78BtNBu/giphy.gif");
+
+}
+
+
 /* Custom page footer */
 .footer {
   padding-top: 19px;
