--- a/app/less/style.less
+++ b/app/less/style.less
@@ -85,3 +85,15 @@ body {
 {
   padding-right: 35px;
 }
+.midphoto
+{
+  margin-left : 200px;
+}
+#positionB
+{
+  margin-left: 50px;
+}
+#test
+{
+  margin-left: 200px;
+}
