--- a/app/less/style.less
+++ b/app/less/style.less
@@ -22,7 +22,6 @@ body {
   width: auto;
   padding-bottom: 20px;
   border-bottom: 1px solid #e5e5e5;
-
 }
 
 .button {
@@ -40,7 +39,8 @@ body {
 
 .jumbotron {
   background-image: url("https://media.giphy.com/media/XcsdCc78BtNBu/giphy.gif");
-
+  text-align: center;
+  color: white;
 }
 
 
