--- a/app/less/style.less
+++ b/app/less/style.less
@@ -73,33 +73,47 @@ body {
   .button {
     text-align: center;
   ;}
-#test1
-{
-  margin-top:-10px;
-  margin-bottom:0px;
-  margin-left:-80px;
-  margin-right:00px;
-  //border: dashed black;
-  //position: absolute;
-}
-#test2
-{
-  padding-right: 40px;
-}
 
-#test3
-{
-  padding-right: 35px;
-}
 .midphoto
 {
   margin-left : 200px;
+}
+#midphoto
+{
+  width: 450px;
+  height: 450px;
 }
 #positionB
 {
   margin-left: 50px;
 }
-#test
+#button1
 {
-  margin-left: 200px;
+  margin-left: 0px;
+}
+  #button11
+  {
+    padding-right: 33px;
+  }
+#button2
+{
+  margin-left:79px;
+}
+
+#button3
+{
+  margin-left:79px;
+}
+  #button31
+  {
+    padding-right: 39px;
+  }
+#leftphoto
+{
+  width: 100px;
+  height: 100px;
+}
+.leftphoto
+{
+  margin-left: 50px;
 }
