--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -2,25 +2,29 @@
     <tr>
         <td>
             <div class="leftphoto">
-                <img src="http://vignette3.wikia.nocookie.net/lostpedia/images/7/78/Kleidung-klein.png/revision/latest?cb=20080718151755&path-prefix=de" alt="First slide">
+                <img id= "leftphoto" src="http://vignette3.wikia.nocookie.net/lostpedia/images/7/78/Kleidung-klein.png/revision/latest?cb=20080718151755&path-prefix=de" alt="First slide">
             </div>
             <div class="leftphoto">
-                <img src="http://vignette3.wikia.nocookie.net/lostpedia/images/7/78/Kleidung-klein.png/revision/latest?cb=20080718151755&path-prefix=de" alt="First slide">
+                <img id= "leftphoto" src="http://vignette3.wikia.nocookie.net/lostpedia/images/7/78/Kleidung-klein.png/revision/latest?cb=20080718151755&path-prefix=de" alt="First slide">
             </div>
             <div class="leftphoto">
-                <img src="http://vignette3.wikia.nocookie.net/lostpedia/images/7/78/Kleidung-klein.png/revision/latest?cb=20080718151755&path-prefix=de" alt="First slide">
+                <img id= "leftphoto" src="http://vignette3.wikia.nocookie.net/lostpedia/images/7/78/Kleidung-klein.png/revision/latest?cb=20080718151755&path-prefix=de" alt="First slide">
             </div>
         </td>
         <td>
-            <div class="midphoto">
-                <img src="http://vignette3.wikia.nocookie.net/lostpedia/images/7/78/Kleidung-klein.png/revision/latest?cb=20080718151755&path-prefix=de" alt="First slide">
-            </div>
+
+                <div class="midphoto">
+                    <img id="midphoto"src="http://vignette3.wikia.nocookie.net/lostpedia/images/7/78/Kleidung-klein.png/revision/latest?cb=20080718151755&path-prefix=de" alt="First slide">
+                </div>
+
+
+
         </td>
         <td>
-            <div id = "test1" class="product-specifications">
+            <div id = "button1">
                 <ul id="dropdown">
-                    <ol class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><button id = "test" class="btn btn-success " >Große Wählen</button> </a>
-                        <ol id = "test"class="dropdown-menu">
+                    <ol class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><button id="button11"class="btn btn-success " >Große Wählen</button> </a>
+                        <ol id class="dropdown-menu">
 
                             <li><a href="#">XS</a></li>
                             <li><a href="#">S</a></li>
@@ -32,12 +36,12 @@
                 </ul>
             </div>
             <h3>
-                <div class="product-descriptions">
-                    <button id= "test"type="button" class="btn btn-success ">In den Warenkorb</button>
+                <div id = "button2">
+                    <button type="button" class="btn btn-success ">In den Warenkorb</button>
                 </div></h3>
             <h3>
-                <div class="product-descriptions">
-                    <button id = "test" type="button" class="btn btn-success ">Wunschzettel</button>
+                <div id ="button3">
+                    <button id ="button31" type="button" class="btn btn-success ">Wunschzettel</button>
                 </div></h3>
             </div>
 
