--- a/app/tpl/partials/webShopmain.hbs
+++ b/app/tpl/partials/webShopmain.hbs
@@ -1,12 +1,13 @@
 
 
 <div class="container">
-    <div class="row category-child" style="margin-top:10em">
+
+    <div class="row produktShop" style="margin-top:1em">
         <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
             <a class="thumbnail" href="/produktAnsicht.html">
-                <img class="img-responsive" src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" alt="">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
                 <div class="wrapper">
-                    <div class="caption post-content">
+                    <div class="caption produktShopName">
                         <span>Produkt</span>
                     </div>
                 </div>
@@ -14,9 +15,9 @@
         </div>
         <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
             <a class="thumbnail" href="/produktAnsicht.html">
-                <img class="img-responsive" src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" alt="">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
                 <div class="wrapper">
-                    <div class="caption post-content">
+                    <div class="caption produktShopName">
                         <span>Produkt</span>
                     </div>
                 </div>
@@ -24,57 +25,21 @@
         </div>
         <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
             <a class="thumbnail" href="/produktAnsicht.html">
-                <img class="img-responsive" src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" alt="">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
                 <div class="wrapper">
-                    <div class="caption post-content">
-                        <span>Produkt</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-    </div>
-</div>
-<div class="container">
-    <div class="row category-child" style="margin-top:10em">
-        <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
-            <a class="thumbnail" href="/produktAnsicht.html">
-                <img class="img-responsive" src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" alt="">
-                <div class="wrapper">
-                    <div class="caption post-content">
-                        <span>Produkt</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
-            <a class="thumbnail" href="/produktAnsicht.html">
-                <img class="img-responsive" src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" alt="">
-                <div class="wrapper">
-                    <div class="caption post-content">
-                        <span>Produkt</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
-            <a class="thumbnail" href="/produktAnsicht.html">
-                <img class="img-responsive" src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" alt="">
-                <div class="wrapper">
-                    <div class="caption post-content">
+                    <div class="caption produktShopName">
                         <span>Produkt</span>
                     </div>
                 </div>
             </a>
         </div>
     </div>
-</div>
-<div class="container">
-    <div class="row category-child" style="margin-top: 10em">
+    <div class="row produktShop" style="margin-top:1em">
         <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
             <a class="thumbnail" href="/produktAnsicht.html">
-                <img class="img-responsive" src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" alt="">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
                 <div class="wrapper">
-                    <div class="caption post-content">
+                    <div class="caption produktShopName">
                         <span>Produkt</span>
                     </div>
                 </div>
@@ -82,9 +47,9 @@
         </div>
         <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
             <a class="thumbnail" href="/produktAnsicht.html">
-                <img class="img-responsive" src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" alt="">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
                 <div class="wrapper">
-                    <div class="caption post-content">
+                    <div class="caption produktShopName">
                         <span>Produkt</span>
                     </div>
                 </div>
@@ -92,9 +57,41 @@
         </div>
         <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
             <a class="thumbnail" href="/produktAnsicht.html">
-                <img class="img-responsive" src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" alt="">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
                 <div class="wrapper">
-                    <div class="caption post-content">
+                    <div class="caption produktShopName">
+                        <span>Produkt</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="row produktShop" style="margin-top:1em">
+        <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
+            <a class="thumbnail" href="/produktAnsicht.html">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
+                <div class="wrapper">
+                    <div class="caption produktShopName">
+                        <span>Produkt</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
+            <a class="thumbnail" href="/produktAnsicht.html">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
+                <div class="wrapper">
+                    <div class="caption produktShopName">
+                        <span>Produkt</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
+            <a class="thumbnail" href="/produktAnsicht.html">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
+                <div class="wrapper">
+                    <div class="caption produktShopName">
                         <span>Produkt</span>
                     </div>
                 </div>
