--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -1,3 +1,4 @@
+
 <table>
     <tr>
         <td>
@@ -21,6 +22,13 @@
 
         </td>
         <td>
+            <div id = "button2">
+                <h2 id ="button22"">Verfügbarkeit</h2>
+            </div>
+            <div id = "button2" >
+                <h2>Hier wird den Preis von Datenbank aufgerufen</h2>
+
+            </div>
             <div id = "button1">
                 <ul id="dropdown">
                     <ol class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><button id="button11"class="btn btn-success " >Große Wählen</button> </a>
