--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -56,5 +56,18 @@
         </td>
     </tr>
     <tr>
+
+        <td  valign="middle" align="center" colspan="3"><p id ="produktDetails">
+            Details:
+            Ob chic, lässig oder romantisch - style sie, wie es Dir gefällt.
+            Die locker figurumspielende Hemdbluse verfügt über einen gerüschten Stehkragen und Rüschenakzente an den Manschetten.
+            Die Knopfleiste sowie die Manschetten sind mit schimmernden Perlmuttknöpfen besetzt.
+            Der Saum ist abgerundet.
+            Den Rücken ziert eine doppelte Schulterpasse.
+            Grösseninfo:
+            Länge ab Rückenmitte in Gr. 36 ca. 70 cm, Ärmellänge ab Schulter ca. 62 cm (kann je nach Gr. leicht variieren)
+            Material / Pflege:
+            97% Baumwolle | 3% Elasthan | Enthält nichttextile Teile tierischen Ursprungs
+        </p></td>
     </tr>
 </table>
