--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -22,13 +22,16 @@
 
         </td>
         <td>
-            <div id = "button2">
-                <h2 id ="button22"">Verfügbarkeit</h2>
-            </div>
             <div id = "button2" >
                 <h2>Hier wird den Preis von Datenbank aufgerufen</h2>
 
             </div>
+            <div class ="grad" id = "button2">
+                <h2 id ="button22"></h2>
+            </div>
+
+
+
             <div id = "button1">
                 <ul id="dropdown">
                     <ol class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><button id="button11"class="btn btn-success " >Große Wählen</button> </a>
@@ -45,11 +48,11 @@
             </div>
             <h3>
                 <div id = "button2">
-                    <button type="button" class="btn btn-success ">In den Warenkorb</button>
+                    <button id ="button21" type="button" class="btn btn-success "><strong>In den Warenkorb</strong></button>
                 </div></h3>
             <h3>
                 <div id ="button3">
-                    <button id ="button31" type="button" class="btn btn-success ">Wunschzettel</button>
+                    <button id ="button31" type="button" class="btn btn-success "><strong>Wunschzettel</strong></button>
                 </div></h3>
             </div>
 
