ProduktAnsicht Beispiel Seite mit button Funktionen

--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -22,8 +22,9 @@
 
         </td>
         <td>
+
             <div id = "button2" >
-                <h2>Hier wird den Preis von Datenbank aufgerufen</h2>
+                <h2>Hier wird der Preis von Datenbank aufgerufen</h2>
 
             </div>
             <div class ="grad" id = "button2">
@@ -34,7 +35,7 @@
 
             <div id = "button1">
                 <ul id="dropdown">
-                    <ol class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><button id="button11"class="btn btn-success " >Große Wählen</button> </a>
+                    <ol class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><button id="button11"class="btn  " >Größe</button> </a>
                         <ol id class="dropdown-menu">
 
                             <li><a href="#">XS</a></li>
@@ -48,11 +49,11 @@
             </div>
             <h3>
                 <div id = "button2">
-                    <button id ="button21" type="button" class="btn btn-success "><strong>In den Warenkorb</strong></button>
+                    <button id ="button21" type="button" class="btn  "><strong>In den Warenkorb</strong></button>
                 </div></h3>
             <h3>
                 <div id ="button3">
-                    <button id ="button31" type="button" class="btn btn-success "><strong>Wunschzettel</strong></button>
+                    <button id ="button31" type="button" class="btn  "><strong>Wunschzettel        </strong></button>
                 </div></h3>
             </div>
 
