--- a/app/less/style.less
+++ b/app/less/style.less
@@ -92,7 +92,10 @@ body {
   margin-left: 0px;
 }
   #button11
+
   {
+    color: black;
+    background-color: #e7e7e7;
     padding-right: 33px;
   }
 #button2
@@ -104,8 +107,17 @@ body {
 {
   margin-left:79px;
 }
+#button21
+
+{
+  color: white;
+  background-color:#e7e7e7 ;
+  padding-right: 39px;
+}
   #button31
-  {
+
+  { color: black;
+    background-color: #e7e7e7;
     padding-right: 39px;
   }
 #leftphoto
@@ -148,3 +160,10 @@ body {
   margin-left: 350px ;
   margin-right: 350px;
 }
+.grad{
+
+  margin-bottom: 30px;
+  width:20px;
+  height:20px;
+  border-radius:50px;
+  background:linear-gradient(to bottom, #FF0000 , #FF0000 )}
