--- a/app/less/style.less
+++ b/app/less/style.less
@@ -81,7 +81,7 @@ body {
 #midphoto
 {
   width: 450px;
-  height: 450px;
+  height: 600px;
 }
 #positionB
 {
@@ -122,8 +122,8 @@ body {
   }
 #leftphoto
 {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 180px;
 }
 .leftphoto
 {
@@ -136,7 +136,7 @@ body {
 }
 .produktShop .produktShopName {
   background-color: rgba(7, 7, 7, 0.65);
-  color: #fff;
+  color: #8b7f48;
   margin-top: -30px;
   position: relative;
   text-align: center;
