--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -3,19 +3,19 @@
     <tr>
         <td>
             <div class="leftphoto">
-                <img id= "leftphoto" src="http://vignette3.wikia.nocookie.net/lostpedia/images/7/78/Kleidung-klein.png/revision/latest?cb=20080718151755&path-prefix=de" alt="First slide">
+                <img id= "leftphoto" src="http://pics4.esprit.de/Shop/PicSPV_ZoomSecondView/096EO1F013_110.jpg" alt="First slide">
             </div>
             <div class="leftphoto">
-                <img id= "leftphoto" src="http://vignette3.wikia.nocookie.net/lostpedia/images/7/78/Kleidung-klein.png/revision/latest?cb=20080718151755&path-prefix=de" alt="First slide">
+                <img id= "leftphoto" src="http://pics4.esprit.de/Shop/PicSPV_ZoomSide/096EO1F013_110.jpg" alt="First slide">
             </div>
             <div class="leftphoto">
-                <img id= "leftphoto" src="http://vignette3.wikia.nocookie.net/lostpedia/images/7/78/Kleidung-klein.png/revision/latest?cb=20080718151755&path-prefix=de" alt="First slide">
+                <img id= "leftphoto" src="http://pics4.esprit.de/Shop/PicSPV_ZoomSecondView/096EO1F013_110.jpg" alt="First slide">
             </div>
         </td>
         <td>
 
                 <div class="midphoto">
-                    <img id="midphoto"src="http://vignette3.wikia.nocookie.net/lostpedia/images/7/78/Kleidung-klein.png/revision/latest?cb=20080718151755&path-prefix=de" alt="First slide">
+                    <img id="midphoto"src="http://pics4.esprit.de/Shop/PicSPV_ZoomMainView/096EO1F013_110.jpg" alt="First slide">
                 </div>
 
 
@@ -61,7 +61,9 @@
     </tr>
     <tr>
 
-        <td  valign="middle" align="center" colspan="3"><p id ="produktDetails">
+        <td  valign="middle" align="center" colspan="3">
+            <p><strong>Business-Bluse aus Baumwollmix</strong></p>
+            <p id ="produktDetails">
             Details:
             Ob chic, lässig oder romantisch - style sie, wie es Dir gefällt.
             Die locker figurumspielende Hemdbluse verfügt über einen gerüschten Stehkragen und Rüschenakzente an den Manschetten.
