Web Shop  Kategorisierung Basic

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -130,7 +130,11 @@ body {
   margin-left: 50px;
 }
 
-//Test Webshop//
+/*Test Webshop*/
+.Segment{
+  position:absolute;
+  left:0;
+}
 .produktShop .produktShopName span {
   color: #fff;
 }
@@ -155,6 +159,8 @@ body {
   position: relative;
   top: -10px;
 }
+
+/*ProduktDetail*/
 #produktDetails
 {
   margin-left: 350px ;
