--- a/app/tpl/partials/webShopmain.hbs
+++ b/app/tpl/partials/webShopmain.hbs
@@ -1,8 +1,17 @@
 
 
 <div class="container">
+    <div class="Segment">
 
-    <div class="row produktShop" style="margin-top:1em">
+        <h2>Segment</h2>
+        <h3><a href="#">Shirts</a></h3>
+        <h3><a href="#">Tops</a></h3>
+        <h3><a href="#">Pullover</a></h3>
+        <h3><a href="#">Jacken</a></h3>
+
+    </div>
+
+    <div class="row produktShop" >
         <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
             <a class="thumbnail" href="/produktAnsicht.html">
                 <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
@@ -34,7 +43,7 @@
             </a>
         </div>
     </div>
-    <div class="row produktShop" style="margin-top:1em">
+    <div class="row produktShop" >
         <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
             <a class="thumbnail" href="/produktAnsicht.html">
                 <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
@@ -66,7 +75,7 @@
             </a>
         </div>
     </div>
-    <div class="row produktShop" style="margin-top:1em">
+    <div class="row produktShop" >
         <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
             <a class="thumbnail" href="/produktAnsicht.html">
                 <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
