Web Shop  Kategorisierung Basic 2

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -138,6 +138,12 @@ body {
 .produktShop .produktShopName span {
   color: #fff;
 }
+.produktShop .aProdukt{
+  width: 220px;
+  heigth:250px;
+}
+
+
 .produktShop .produktShopName {
   background-color: rgba(7, 7, 7, 0.65);
   color: #8b7f48;
@@ -146,12 +152,12 @@ body {
   text-align: center;
   width: 100%;
   z-index: 1;
-  height: 30px;
+  height: 50px;
   overflow: hidden;
 }
-.thumb img {
-  width: 200px;
-  height: 150px;
+.thumbnail img {
+  width: 220px;
+  height: 250px;
 }
 
 .produktShopName span {
