--- a/app/tpl/partials/webShopmain.hbs
+++ b/app/tpl/partials/webShopmain.hbs
@@ -12,7 +12,7 @@
     </div>
 
     <div class="row produktShop" >
-        <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
+        <div class="aProdukt col-md-12">
             <a class="thumbnail" href="/produktAnsicht.html">
                 <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
                 <div class="wrapper">
@@ -22,7 +22,7 @@
                 </div>
             </a>
         </div>
-        <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
+        <div class="aProdukt col-md-12">
             <a class="thumbnail" href="/produktAnsicht.html">
                 <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
                 <div class="wrapper">
@@ -32,71 +32,7 @@
                 </div>
             </a>
         </div>
-        <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
-            <a class="thumbnail" href="/produktAnsicht.html">
-                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
-                <div class="wrapper">
-                    <div class="caption produktShopName">
-                        <span>Produkt</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="row produktShop" >
-        <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
-            <a class="thumbnail" href="/produktAnsicht.html">
-                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
-                <div class="wrapper">
-                    <div class="caption produktShopName">
-                        <span>Produkt</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
-            <a class="thumbnail" href="/produktAnsicht.html">
-                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
-                <div class="wrapper">
-                    <div class="caption produktShopName">
-                        <span>Produkt</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
-            <a class="thumbnail" href="/produktAnsicht.html">
-                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
-                <div class="wrapper">
-                    <div class="caption produktShopName">
-                        <span>Produkt</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="row produktShop" >
-        <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
-            <a class="thumbnail" href="/produktAnsicht.html">
-                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
-                <div class="wrapper">
-                    <div class="caption produktShopName">
-                        <span>Produkt</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
-            <a class="thumbnail" href="/produktAnsicht.html">
-                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
-                <div class="wrapper">
-                    <div class="caption produktShopName">
-                        <span>Produkt</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="col-lg-2 col-md-4 col-xs-6 thumb ">
+        <div class="aProdukt col-md-12">
             <a class="thumbnail" href="/produktAnsicht.html">
                 <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
                 <div class="wrapper">
