Web Shop  Kategorisierung Basic 3

--- a/app/tpl/partials/webShopmain.hbs
+++ b/app/tpl/partials/webShopmain.hbs
@@ -43,4 +43,68 @@
             </a>
         </div>
     </div>
+    <div class="row produktShop" >
+        <div class="aProdukt col-md-12">
+            <a class="thumbnail" href="/produktAnsicht.html">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
+                <div class="wrapper">
+                    <div class="caption produktShopName">
+                        <span>Produkt</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="aProdukt col-md-12">
+            <a class="thumbnail" href="/produktAnsicht.html">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
+                <div class="wrapper">
+                    <div class="caption produktShopName">
+                        <span>Produkt</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="aProdukt col-md-12">
+            <a class="thumbnail" href="/produktAnsicht.html">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
+                <div class="wrapper">
+                    <div class="caption produktShopName">
+                        <span>Produkt</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="row produktShop" >
+        <div class="aProdukt col-md-12">
+            <a class="thumbnail" href="/produktAnsicht.html">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
+                <div class="wrapper">
+                    <div class="caption produktShopName">
+                        <span>Produkt</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="aProdukt col-md-12">
+            <a class="thumbnail" href="/produktAnsicht.html">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
+                <div class="wrapper">
+                    <div class="caption produktShopName">
+                        <span>Produkt</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="aProdukt col-md-12">
+            <a class="thumbnail" href="/produktAnsicht.html">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
+                <div class="wrapper">
+                    <div class="caption produktShopName">
+                        <span>Produkt</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
 </div>
