ProduktAnsicht Beispiel Seite mit button Funktionen

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -80,6 +80,7 @@ body {
 }
 #midphoto
 {
+  margin-left: -40px;
   width: 450px;
   height: 600px;
 }
@@ -122,12 +123,13 @@ body {
   }
 #leftphoto
 {
-  width: 150px;
-  height: 180px;
+  width: 130px;
+  height: 170px;
+  margin-bottom: 10px;
 }
 .leftphoto
 {
-  margin-left: 50px;
+  margin-left: 100px;
 }
 
 //Test Webshop//
