--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -1,7 +1,7 @@
 
-<table>
+<table style="margin-left: auto">
     <tr>
-        <td>
+        <td >
             <div class="leftphoto">
                 <img id= "leftphoto" src=" http://pics4.esprit.de/Shop/PicSPV_ZoomSecondView/096EO1F013_110.jpg" alt="First slide">
             </div>
@@ -24,7 +24,7 @@
         <td>
 
             <div id = "button2" >
-                <h2>Hier wird der Preis von Datenbank aufgerufen</h2>
+                <h2> Preis </h2>
 
             </div>
             <div class ="grad" id = "button2">
