Web Shop  Link to Artist simple 2

--- a/app/tpl/partials/webShopmain.hbs
+++ b/app/tpl/partials/webShopmain.hbs
@@ -17,7 +17,7 @@
                 <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
                 <div class="wrapper">
                     <div class="caption produktShopName">
-                        <span>Produkt</span>
+                        <span>Produkt Preis</span>
                     </div>
                 </div>
             </a>
@@ -28,7 +28,7 @@
                 <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
                 <div class="wrapper">
                     <div class="caption produktShopName">
-                        <span>Produkt</span>
+                        <span>Produkt Preis</span>
                     </div>
                 </div>
             </a>
@@ -39,42 +39,7 @@
                 <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
                 <div class="wrapper">
                     <div class="caption produktShopName">
-                        <span>Produkt</span>
-                    </div>
-                </div>
-            </a>
-            <a href="#"> Link to Artist</a>
-        </div>
-    </div>
-    <div class="row produktShop" >
-        <div class="aProdukt col-md-12">
-            <a class="thumbnail" href="/produktAnsicht.html">
-                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
-                <div class="wrapper">
-                    <div class="caption produktShopName">
-                        <span>Produkt</span>
-                    </div>
-                </div>
-            </a>
-            <a href="#"> Link to Artist</a>
-        </div>
-        <div class="aProdukt col-md-12">
-            <a class="thumbnail" href="/produktAnsicht.html">
-                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
-                <div class="wrapper">
-                    <div class="caption produktShopName">
-                        <span>Produkt</span>
-                    </div>
-                </div>
-            </a>
-            <a href="#"> Link to Artist</a>
-        </div>
-        <div class="aProdukt col-md-12">
-            <a class="thumbnail" href="/produktAnsicht.html">
-                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
-                <div class="wrapper">
-                    <div class="caption produktShopName">
-                        <span>Produkt</span>
+                        <span>Produkt Preis</span>
                     </div>
                 </div>
             </a>
@@ -87,7 +52,7 @@
                 <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
                 <div class="wrapper">
                     <div class="caption produktShopName">
-                        <span>Produkt</span>
+                        <span>Produkt Preis</span>
                     </div>
                 </div>
             </a>
@@ -98,7 +63,7 @@
                 <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
                 <div class="wrapper">
                     <div class="caption produktShopName">
-                        <span>Produkt </span>
+                        <span>Produkt Preis</span>
                     </div>
                 </div>
             </a>
@@ -109,7 +74,42 @@
                 <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
                 <div class="wrapper">
                     <div class="caption produktShopName">
-                        <span>Produkt</span>
+                        <span>Produkt Preis</span>
+                    </div>
+                </div>
+            </a>
+            <a href="#"> Link to Artist</a>
+        </div>
+    </div>
+    <div class="row produktShop" >
+        <div class="aProdukt col-md-12">
+            <a class="thumbnail" href="/produktAnsicht.html">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
+                <div class="wrapper">
+                    <div class="caption produktShopName">
+                        <span>Produkt Preis</span>
+                    </div>
+                </div>
+            </a>
+            <a href="#"> Link to Artist</a>
+        </div>
+        <div class="aProdukt col-md-12">
+            <a class="thumbnail" href="/produktAnsicht.html">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
+                <div class="wrapper">
+                    <div class="caption produktShopName">
+                        <span>Produkt Preis </span>
+                    </div>
+                </div>
+            </a>
+            <a href="#"> Link to Artist</a>
+        </div>
+        <div class="aProdukt col-md-12">
+            <a class="thumbnail" href="/produktAnsicht.html">
+                <img  src="http://www.edupics.com/coloring-page-t-shirt-dm19012.jpg" >
+                <div class="wrapper">
+                    <div class="caption produktShopName">
+                        <span>Produkt Preis</span>
                     </div>
                 </div>
             </a>
