--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -62,7 +62,7 @@
     <tr>
 
         <td  valign="middle" align="center" colspan="3">
-            <p><strong>Business-Bluse aus Baumwollmix</strong></p>
+            <p style="margin-top: 30px"><strong>Business-Bluse aus Baumwollmix</strong></p>
             <p id ="produktDetails">
             Details:
             Ob chic, lässig oder romantisch - style sie, wie es Dir gefällt.
