ProduktAnsicht Beispiel Seite mit button Funktionen

--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -1,5 +1,5 @@
 
-<table style="margin-left: auto">
+<table align="center">
     <tr>
         <td >
             <div class="leftphoto">
@@ -62,9 +62,13 @@
     <tr>
 
         <td  valign="middle" align="center" colspan="3">
-            <p><strong>Business-Bluse aus Baumwollmix</strong></p>
+            <p ><strong>Business-Bluse aus Baumwollmix</strong></p>
             <p id ="produktDetails">
               Hier geht es um eine ziemlich schöne Frau, tolles Gesicht  aber schade, dass sie nicht viel lächeln . scheiße
         </p></td>
     </tr>
+
+
+
+
 </table>
