Web Shop  better Kategorie view

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -133,10 +133,11 @@ body {
 }
 
 /*Test Webshop*/
-.Segment{
+.list-group-Segment{
   position:absolute;
   left:0;
 }
+
 .produktShop .produktShopName span {
   color: #fff;
 }
