--- a/app/tpl/partials/webShopmain.hbs
+++ b/app/tpl/partials/webShopmain.hbs
@@ -1,14 +1,11 @@
 
 
 <div class="container">
-    <div class="Segment">
-
-        <h2>Segment</h2>
-        <h3><a href="#">Shirts</a></h3>
-        <h3><a href="#">Tops</a></h3>
-        <h3><a href="#">Pullover</a></h3>
-        <h3><a href="#">Jacken</a></h3>
-
+    <div class="list-group-Segment">
+        <a href="#" class="list-group-item">Shirts</a>
+        <a href="#" class="list-group-item">Tops</a>
+        <a href="#" class="list-group-item">Pullover</a>
+        <a href="#" class="list-group-item">Jacken</a>
     </div>
 
     <div class="row produktShop" >
