Web Shop  better Kategorie view 2

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -135,7 +135,9 @@ body {
 /*Test Webshop*/
 .list-group-Segment{
   position:absolute;
-  left:0;
+  left:1px;
+  margin-top:20px;
+
 }
 
 .produktShop .produktShopName span {
