ProduktAnsicht Beispiel Seite mit button Funktionen

--- a/app/less/produktAnsicht.less
+++ b/app/less/produktAnsicht.less
@@ -1,44 +1,191 @@
-.product-detail-2 .vendor-feedback {
-    color: #A31C49;
-    font-weight: bold;
+@import "../../node_modules/bootstrap/less/bootstrap";
+
+/* Space out content a bit */
+body {
+    padding-bottom: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
-.product-detail-2 .product-price,
-.product-detail-2 h2,
-.product-detail-2 h3,
-.product-detail-2 .vendor-reject {
-    color: #0F960B;
-    font-weight: bold;
+
+/* Everything but the jumbotron gets side spacing for mobile first views */
+.header,
+.marketing,
+.footer {
+    padding-right: 15px;
+    padding-left: 15px;
 }
-.product-detail-2 .vendor-logo img {
-    width: 100px;
-    height: 100px;
+
+/* Custom page header */
+.header {
+
+    height: 50px;
+    width: auto;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #e5e5e5;
 }
-.product-detail-2 .vendor-logo {
-    margin: 13px 0;
+
+.button {
+    height: 10px;
+    width: 10px;
+
 }
-.product-detail-2 .product-price {
-    font-size: 18px;
+
+/* Make the masthead heading the same height as the navigation */
+.header h3 {
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 10px;
 }
-.product-detail-2 .product-price span {
-    font-weight: normal;
+
+.jumbotron {
+    background-image: url("https://media.giphy.com/media/XcsdCc78BtNBu/giphy.gif");
+    text-align: center;
+    color: white;
 }
-.product-detail-2 .btn-success {
-    background: #99CC00;
-    border: 1px solid #99CC00;
+
+
+/* Custom page footer */
+.footer {
+    padding-top: 19px;
+    color: #777;
+    border-top: 1px solid #e5e5e5;
 }
-.product-detail-2 .carousel-inner{
-    width:100%;
-    max-height: 300px !important;
+
+/* Customize container */
+@media (min-width: 768px) {
+    .container {
+        max-width: 730px;
+        text-align: center;
+    }
 }
-.product-detail-2 .product-descriptions {
-    word-wrap: break-word;
+.container-narrow > hr {
+    margin: 30px 0;
 }
-#testthu
+
+/* Main marketing message and sign up button */
+.fotos {
+    text-align: left;
+;
+}
+.hauptFoto {
+    text-align: center;
+; }
+.button {
+    text-align: center;
+;}
+
+#positionB
 {
-    margin-top:800px;
-    margin-bottom:40px;
-    margin-left:50px;
-    margin-right:30px;
-    border: dashed black;
-    position: absolute;
+    margin-left: 50px;
+}
+
+
+/*Test Webshop*/
+.Segment{
+    position:absolute;
+    left:0;
+}
+.produktShop .produktShopName span {
+    color: #fff;
+}
+.produktShop .aProdukt{
+    margin-top: 20px;
+    width: 220px;
+    heigth:250px;
+}
+
+
+.produktShop .produktShopName {
+    background-color: rgba(7, 7, 7, 0.65);
+    color: #8b7f48;
+    margin-top: -30px;
+    position: relative;
+    text-align: center;
+    width: 100%;
+    z-index: 1;
+    height: 50px;
+    overflow: hidden;
+}
+.thumbnail img {
+    width: 220px;
+    height: 250px;
+}
+
+.produktShopName span {
+    line-height: 30px;
+    position: relative;
+    top: -10px;
+}
+
+/*ProduktDetail*/
+
+#produktDetails
+{
+    margin-left: 350px ;
+    margin-right: 350px;
+}
+@import "../../node_modules/bootstrap/less/bootstrap";
+
+.grad{
+
+
+    margin-bottom: 30px;
+    width:20px;
+    height:20px;
+    border-radius:50px;
+    background:linear-gradient(to bottom, #FF0000 , #FF0000 )}
+
+
+.midphoto
+{
+    margin-left : 200px;
+}
+#midphoto
+{
+    margin-left: -40px;
+    width: 450px;
+    height: 600px;
+}
+#button1
+{
+    margin-left: 0px;
+}
+#button11
+
+{
+    color: black;
+    background-color: #e7e7e7;
+    padding-right: 33px;
+}
+#button2
+{
+    margin-left:79px;
+}
+
+#button3
+{
+    margin-left:79px;
+}
+#button21
+
+{
+    color: white;
+    background-color:#e7e7e7 ;
+    padding-right: 39px;
+}
+#button31
+
+{ color: black;
+    background-color: #e7e7e7;
+    padding-right: 39px;
+}
+#leftphoto
+{
+    width: 130px;
+    height: 170px;
+    margin-bottom: 10px;
+}
+.leftphoto
+{
+    margin-left: 100px;
 }
