--- a/app/tpl/partials/produktAnsichtmain.hbs
+++ b/app/tpl/partials/produktAnsichtmain.hbs
@@ -34,16 +34,20 @@
 
 
             <div id = "button1">
-                <ul id="dropdown">
-                    <ol class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><button id="button11"class="btn  " >Größe</button> </a>
-                        <ol id class="dropdown-menu">
+                <ul>
 
-                            <li><a href="#">XS</a></li>
-                            <li><a href="#">S</a></li>
-                            <li><a href="#">M</a></li>
-                            <li><a href="#">L</a></li>
-                            <li><a href="#">XL</a></li>
-                        </ol>
+                    <ol>
+
+                       <p >Größe</p>
+                            <select name="size">
+                                <option value="wählen"><strong>Wählen</strong></option>
+                                <option value="XS">XS</option>
+                                <option value="S">S</option>
+                                <option value="M">M</option>
+                                <option value="L">L</option>
+                                <option value="XL">XL</option>
+                            </select>
+
                     </ol>
                 </ul>
             </div>
@@ -67,4 +71,7 @@
               Hier geht es um eine ziemlich schöne Frau, tolles Gesicht  aber schade, dass sie nicht viel lächeln . scheiße
         </p></td>
     </tr>
+
+
+
 </table>
