--- a/app/less/style.less
+++ b/app/less/style.less
@@ -65,72 +65,20 @@ body {
 /* Main marketing message and sign up button */
 .fotos {
   text-align: left;
-  ;
+;
 }
 .hauptFoto {
   text-align: center;
 ; }
-  .button {
-    text-align: center;
-  ;}
+.button {
+  text-align: center;
+;}
 
-.midphoto
-{
-  margin-left : 200px;
-}
-#midphoto
-{
-  margin-left: -40px;
-  width: 450px;
-  height: 600px;
-}
 #positionB
 {
   margin-left: 50px;
 }
-#button1
-{
-  margin-left: 0px;
-}
-  #button11
 
-  {
-    color: black;
-    background-color: #e7e7e7;
-    padding-right: 33px;
-  }
-#button2
-{
-  margin-left:79px;
-}
-
-#button3
-{
-  margin-left:79px;
-}
-#button21
-
-{
-  color: white;
-  background-color:#e7e7e7 ;
-  padding-right: 39px;
-}
-  #button31
-
-  { color: black;
-    background-color: #e7e7e7;
-    padding-right: 39px;
-  }
-#leftphoto
-{
-  width: 130px;
-  height: 170px;
-  margin-bottom: 10px;
-}
-.leftphoto
-{
-  margin-left: 100px;
-}
 
 /*Test Webshop*/
 .list-group-Segment{
@@ -178,10 +126,68 @@ body {
   margin-left: 350px ;
   margin-right: 350px;
 }
+@import "../../node_modules/bootstrap/less/bootstrap";
+
 .grad{
+
 
   margin-bottom: 30px;
   width:20px;
   height:20px;
   border-radius:50px;
   background:linear-gradient(to bottom, #FF0000 , #FF0000 )}
+
+
+.midphoto
+{
+  margin-left : 200px;
+}
+#midphoto
+{
+  margin-left: -40px;
+  width: 450px;
+  height: 600px;
+}
+#button1
+{
+  margin-left: 0px;
+}
+#button11
+
+{
+  color: black;
+  background-color: #e7e7e7;
+  padding-right: 33px;
+}
+#button2
+{
+  margin-left:79px;
+}
+
+#button3
+{
+  margin-left:79px;
+}
+#button21
+
+{
+  color: white;
+  background-color:#e7e7e7 ;
+  padding-right: 39px;
+}
+#button31
+
+{ color: black;
+  background-color: #e7e7e7;
+  padding-right: 39px;
+}
+#leftphoto
+{
+  width: 130px;
+  height: 170px;
+  margin-bottom: 10px;
+}
+.leftphoto
+{
+  margin-left: 100px;
+}
