--- a/app/tpl/partials/header.hbs
+++ b/app/tpl/partials/header.hbs
@@ -17,6 +17,7 @@
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
             <!-- build:css css/app.css --> 
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/produktAnsicht.less" rel="stylesheet">
          <!-- endbuild --> 
 </head>
   <!-- NAVBAR ================================================== --> 
